# SourceManager

./: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  SourceManager.pro  SourceManager_resource.rc  course.cpp  course.h  coursemanager.cpp  coursemanager.h  coursemanager.h.DlxBVS  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
.qtc_clangd/: compile_commands.json
docs/: FunctionOverview.md
qt_confirm_close/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
